<resources>
    <string name="app_name">ImOtaku</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="browse_anime">BROWSE ANIME</string>
    <string name="title_activity_ganre">FullscreenActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="upcoming_anime">upcoming anime</string>
    <string name="title_activity_genre">FullscreenActivity</string>
    <string name="category">CATEGORY</string>
    <string name="title_activity_anime_description">AnimeDescriptionActivity</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="full_name">Full Name</string>
    <string name="password">Age</string>
    <string name="address">Address</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="score">Score</string>
    <string name="_7_55">7.55</string>
    <string name="rank">Rank</string>
    <string name="_1431">#1431</string>
    <string name="favorites">Favorites</string>
    <string name="_3959">3959</string>
    <string name="loading">Loading...</string>
    <string name="tv">TV</string>
    <string name="finished_airing">Finished Airing</string>
    <string name="ep_220">ep 220</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="drama_action_adventure_comedy_super_power_martial_arts">Drama, Action, Adventure, Comedy, Super power, Martial arts</string>
    <string name="anime_description">Moments prior to Naruto Uzumaki\'s birth, a huge demon known as the Kyuubi, the Nine-Tailed Fox, attacked Konohagakure, the Hidden Leaf Village, and wreaked havoc. In order to put an end to the Kyuubi\'s rampage, the leader of the village, the Fourth Hokage, sacrificed his life and sealed the monstrous beast inside the newborn Naruto. Now, Naruto is a hyperactive and knuckle-headed ninja still living in Konohagakure. Shunned because of the Kyuubi inside him, Naruto struggles to find his place in the village, while his burning desire to become the Hokage of Konohagakure leads him not only to some great new friends, but also some deadly foes. [Written by MAL Rewrite]</string>
    <string name="source">Source</string>
    <string name="light_novel">Light Novel</string>
    <string name="popularity">Popularity</string>
    <string name="_999">999</string>
    <string name="rating">Rating</string>
    <string name="pg_13_teens_13_or_older">PG-13 - Teens 13 or older</string>
    <string name="duration">Duration</string>
    <string name="read_more">Read More</string>
    <string name="search_anime">SEARCH ANIME</string>

    <string name="leader">Leader</string>
    <string name="member">Member</string>
    <string name="enter_password">Enter Password</string>
    <string name="create">Create</string>
    <string name="enter_email">Enter Email</string>
    <string name="bug_report">BUG REPORT</string>
    <string name="submit">Submit</string>
    <string name="feedback">Feedback</string>
    <string name="subject">Subject</string>
    <string name="enter_username">Enter Username</string>
    <string name="_8_9">8.9</string>
    <string name="create_account">Create account?</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="your_favorite_list_is_empty">YOUR FAVORITE LIST IS EMPTY</string>
    <string name="my_profile">My Profile</string>
    <string name="update_username">Update Username</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>


    <string-array name="person">
        <item>Robert Miras</item>
        <item>Calabia Nathaniel</item>
        <item>Nitro JC</item>
        <item>Bernales Leynard</item>
        <item>Pereja Airman</item>
        <item>Errol Juliano</item>
        <item>Cabutin Marvin</item>
    </string-array>

    <string-array name="birthdays">
        <item>March 13, 2001</item>
        <item>October 10, 2000</item>
        <item>January 05, 2001</item>
        <item>January 15, 1998</item>
        <item>May 19, 2001</item>
        <item>October 19, 1999</item>
        <item>June 12, 2000</item>
    </string-array>

    <string-array name="title">
        <item>Leader</item>
        <item>Member</item>
        <item>Member</item>
        <item>Member</item>
        <item>Member</item>
        <item>Member</item>
        <item>Member</item>
    </string-array>

</resources>