<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:iconTint="@color/bg_primary_light"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/genre"
        android:title="Category"
        android:iconTint="@color/bg_primary_light"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_genre" />

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:iconTint="@color/bg_primary_light"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_white_search" />

    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        android:iconTint="@color/bg_primary_light"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_heart" />

</menu>