<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_purple_background"
        tools:context=".LoginActivity">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="395dp"
            android:layout_height="334dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/cutie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="56dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/enter_email"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email" />

        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="160dp"
            android:text="@string/create_account"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="136dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/custom_button"
            android:hint="@string/login"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingLogin"
            android:layout_width="250dp"
            android:layout_height="130dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            app:layout_constraintVertical_bias="0.178"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/colorful_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>